--- a/AccountsService/src/main/resources/application.yml
+++ b/AccountsService/src/main/resources/application.yml
@@ -2,7 +2,6 @@ spring:
   application:
     name: AccountsService
   profiles.active: dev
-
 server:
   port: 8080
   error:
@@ -10,7 +9,6 @@ server:
       include-binding-errors: always
       include-stacktrace: on_param
       include-exception: false
-
 ---
 spring:
   sql.init.mode: always
@@ -33,19 +31,34 @@ spring:
     console.path: /h2-ui
 server:
   port: 9900
-
 #debug: true
 logging:
   path: /var/tmp/
   file: /var/tmp/mylog.log
   level:
     root: INFO
-
-
 ---
 spring:
   config.activate.on-profile: prod
-
+  sql.init.mode: always
+  devtools.restart.enabled: true
+  datasource:
+    url: "jdbc:mysql://localhost/accounts_db"
+    driverClassName: com.mysql.cj.jdbc.Driver
+    username: sa
+    password: password
+  jpa:
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQL5Dialect
+    hibernate:
+      ddl-auto: update
+      generate-ddl: true
+    defer-datasource-initialization: true
+logging:
+  path: /var/tmp/
+  file: /var/tmp/mylog.log
+  level:
+    root: ERROR
 server:
   servlet.contextPath: /api/v1
   port: 8443
