--- a/AccountsService/pom.xml
+++ b/AccountsService/pom.xml
@@ -57,6 +57,12 @@
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.14.2</version>
 		</dependency>
+		<!--swagger 3-->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.12</version>
+		</dependency>
 	</dependencies>
 
 	<build>
