--- a/AccountsService/src/main/resources/application.yml
+++ b/AccountsService/src/main/resources/application.yml
@@ -40,13 +40,13 @@ logging:
 ---
 spring:
   config.activate.on-profile: prod
-  sql.init.mode: always
+  sql.init.mode: never
   devtools.restart.enabled: true
   datasource:
     url: "jdbc:mysql://localhost/accounts_db"
     driverClassName: com.mysql.cj.jdbc.Driver
-    username: sa
-    password: password
+    username: root
+    password: root
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL5Dialect
@@ -62,3 +62,8 @@ logging:
 server:
   servlet.contextPath: /api/v1
   port: 8443
+  ssl:
+    key-store: keystore.p12
+    key-store-password: changeit
+    keyStoreType: PKCS12
+    keyAlias: accounts_service
