--- a/AccountsService/src/main/resources/application.yml
+++ b/AccountsService/src/main/resources/application.yml
@@ -9,6 +9,11 @@ server:
       include-binding-errors: always
       include-stacktrace: on_param
       include-exception: false
+accounts.openapi:
+  dev-url: "http://localhost:9900"
+  prod-url: "https://localhost:8443"
+app.jwt.secret: SECRET-KEY-VALUE
+
 ---
 spring:
   sql.init.mode: always
