--- a/AccountsService/src/test/resources/application.yml
+++ b/AccountsService/src/test/resources/application.yml
@@ -9,6 +9,7 @@ server:
       include-binding-errors: always
       include-stacktrace: on_param
       include-exception: false
+app.jwt.secret: SECRET-KEY-VALUE
 ---
 spring:
   sql.init.mode: never
