Reto 4: Añadida Seguridad OAuth

--- a/AccountsService/src/main/resources/application.yml
+++ b/AccountsService/src/main/resources/application.yml
@@ -2,6 +2,29 @@ spring:
   application:
     name: AccountsService
   profiles.active: dev
+  security:
+    oauth2:
+      client:
+        registration:
+          accounts-client-oidc:
+            provider: spring
+            client-id: client1
+            client-secret: myClientSecretValue
+            authorization-grant-type: authorization_code
+            redirect-uri: "http://127.0.0.1:8080/login/oauth2/code/{registrationId}"
+            scope: openid
+            client-name: accounts-client-oidc
+          accounts-client-authorization-code:
+            provider: spring
+            client-id: client1
+            client-secret: myClientSecretValue
+            authorization-grant-type: authorization_code
+            redirect-uri: "http://127.0.0.1:8080/authorized"
+            scope: SCOPE_accounts.read
+            client-name: accounts-client-authorization-code
+        provider:
+          spring:
+            issuer-uri: http://auth-server:9000
 server:
   port: 8080
   error:
